snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.module.sha512
00d42e9a528d3ec51223f8ec7630e090170935acc2130095fe2134213895caa45cc0df84d2efc87a6be11b69ac0c8bba030c21ae0c3c9ba6d88d861144cf5118